scroll bar overflow fixes

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   padding: 2rem;
   height: 100%;
   background-color: #a3afbd;
+  overflow: auto;
 }
 
 /* The sidebar menu */
